--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://NeerajKathayat.github.io/portfolioapp",
   "name": "portfolioapp",
   "version": "0.1.0",
   "private": true,
@@ -6,12 +7,24 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
+    "react-code-auto-typing": "^1.0.5",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
+    "react-vanilla-tilt": "^1.0.0",
+    "styled-components": "^5.3.5",
+    "typewriter-effect": "^2.19.0",
+    "vanilla-tilt": "^1.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
